--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "description": "Different programming styles for implementing the same word count program.",
   "dependencies": {
-    "mori": "^0.3.2",
-    "immutable": "^3.7.5"
+    "mori": "^0.3.2"
   },
   "devDependencies": {},
   "scripts": {
